[gd_scene load_steps=10 format=3 uid="uid://b6k4o4folrehv"]

[ext_resource type="Texture2D" uid="uid://ep17un3y12b7" path="res://sprites/heart.png" id="1_eww6n"]
[ext_resource type="Texture2D" uid="uid://bwk2s40sluctf" path="res://sprites/coin.png" id="2_vymo2"]
[ext_resource type="Script" path="res://pause_btn.gd" id="3_6umhy"]
[ext_resource type="Script" path="res://close_tower_ui.gd" id="4_tpc45"]
[ext_resource type="Script" path="res://tower_building.gd" id="5_2b21h"]
[ext_resource type="Script" path="res://game_over_ui.gd" id="6_2oghl"]
[ext_resource type="Script" path="res://PauseScreenUI.gd" id="7_i2dp5"]
[ext_resource type="Texture2D" uid="uid://b40uv3boti3ih" path="res://sprites/game_over_text.png" id="7_o0ib0"]
[ext_resource type="Texture2D" uid="uid://bkdj06dslh0gx" path="res://sprites/game_over_background.png" id="7_wjoia"]

[node name="HUD" type="MarginContainer"]
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="HealthContainer" type="HBoxContainer" parent="TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HeartIcon" type="TextureRect" parent="TopBar/HBoxContainer/HealthContainer"]
layout_mode = 2
texture = ExtResource("1_eww6n")
expand_mode = 3

[node name="HealthText" type="Label" parent="TopBar/HBoxContainer/HealthContainer"]
layout_mode = 2
text = "20"

[node name="GoldContainer" type="HBoxContainer" parent="TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CoinIcon" type="TextureRect" parent="TopBar/HBoxContainer/GoldContainer"]
layout_mode = 2
texture = ExtResource("2_vymo2")
expand_mode = 3

[node name="GoldText" type="Label" parent="TopBar/HBoxContainer/GoldContainer"]
layout_mode = 2
text = "50"

[node name="PauseBtn" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Pause"
flat = true
script = ExtResource("3_6umhy")

[node name="BuildUI" type="MarginContainer" parent="."]
visible = false
custom_minimum_size = Vector2(170, 250)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="BuildUI"]
layout_mode = 2
size_flags_vertical = 3

[node name="Header" type="MarginContainer" parent="BuildUI/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="CloseButton" type="Button" parent="BuildUI/Panel/Header"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_hover_color = Color(0.74, 0.1998, 0.1998, 1)
text = "X"
flat = true
script = ExtResource("4_tpc45")

[node name="Title" type="Label" parent="BuildUI/Panel/Header"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 1
text = "Build Tower"
horizontal_alignment = 1

[node name="TowerOptions" type="MarginContainer" parent="BuildUI/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -92.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_2b21h")

[node name="VBoxContainer" type="VBoxContainer" parent="BuildUI/Panel/TowerOptions"]
layout_mode = 2

[node name="BuildCannonBtn" type="Button" parent="BuildUI/Panel/TowerOptions/VBoxContainer"]
layout_mode = 2
text = "Cannon - 20 gold"

[node name="BuildIceBtn" type="Button" parent="BuildUI/Panel/TowerOptions/VBoxContainer"]
layout_mode = 2
text = "Ice Tower - 40 gold"

[node name="BuildFireBtn" type="Button" parent="BuildUI/Panel/TowerOptions/VBoxContainer"]
layout_mode = 2
text = "Fire Tower - 100 gold"

[node name="GameOverUI" type="Control" parent="."]
visible = false
layout_mode = 2
script = ExtResource("6_2oghl")

[node name="TextureRect" type="TextureRect" parent="GameOverUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_wjoia")

[node name="Label" type="TextureRect" parent="GameOverUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.5
offset_top = 161.0
offset_right = 182.5
offset_bottom = 244.0
grow_horizontal = 2
texture = ExtResource("7_o0ib0")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -53.0
offset_right = 78.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="RetryBtn" type="Button" parent="GameOverUI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Retry"

[node name="MainMenuBtn" type="Button" parent="GameOverUI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Main Menu"

[node name="LevelCompleteUI" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 100
script = ExtResource("6_2oghl")

[node name="Panel" type="Panel" parent="LevelCompleteUI"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelCompleteUI/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -163.5
offset_right = 163.5
offset_bottom = 83.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Level Complete"

[node name="VBoxContainer" type="VBoxContainer" parent="LevelCompleteUI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -53.0
offset_right = 78.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ContinueBtn" type="Button" parent="LevelCompleteUI/Panel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Continue"

[node name="MainMenuBtn" type="Button" parent="LevelCompleteUI/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Main Menu"

[node name="PauseScreenUI" type="Panel" parent="."]
visible = false
layout_mode = 2
script = ExtResource("7_i2dp5")

[node name="Label" type="Label" parent="PauseScreenUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.0
offset_top = 151.0
offset_right = 157.0
offset_bottom = 234.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Pause"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreenUI"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -53.0
offset_right = 78.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="PauseScreenUI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Resume
"

[node name="MainMenuBtn" type="Button" parent="PauseScreenUI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Main Menu"

[node name="ExitButton" type="Button" parent="PauseScreenUI/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Wave" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "Wave"

[node name="Timer" type="Timer" parent="Wave"]
wait_time = 2.0

[node name="NextWaveContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="NextWaveContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="NextWaveCountdown" type="Label" parent="NextWaveContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 18
text = "Next Wave: 0"
horizontal_alignment = 1

[node name="NextWaveBtn" type="Button" parent="NextWaveContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Next Wave"

[connection signal="pressed" from="PauseBtn" to="PauseBtn" method="_on_pressed"]
[connection signal="pressed" from="BuildUI/Panel/Header/CloseButton" to="BuildUI/Panel/Header/CloseButton" method="_on_pressed"]
[connection signal="selected_tower_location" from="BuildUI/Panel/TowerOptions" to="BuildUI/Panel/TowerOptions" method="_on_selected_tower_location"]
[connection signal="pressed" from="BuildUI/Panel/TowerOptions/VBoxContainer/BuildCannonBtn" to="BuildUI/Panel/TowerOptions" method="_on_build_cannon_btn_pressed"]
[connection signal="pressed" from="BuildUI/Panel/TowerOptions/VBoxContainer/BuildIceBtn" to="BuildUI/Panel/TowerOptions" method="_on_build_ice_btn_pressed"]
[connection signal="pressed" from="BuildUI/Panel/TowerOptions/VBoxContainer/BuildFireBtn" to="BuildUI/Panel/TowerOptions" method="_on_build_fire_btn_pressed"]
[connection signal="pressed" from="GameOverUI/VBoxContainer/RetryBtn" to="GameOverUI" method="_on_retry_btn_pressed"]
[connection signal="pressed" from="GameOverUI/VBoxContainer/MainMenuBtn" to="GameOverUI" method="_on_main_menu_btn_pressed"]
[connection signal="pressed" from="LevelCompleteUI/Panel/VBoxContainer/ContinueBtn" to="LevelCompleteUI" method="_on_retry_btn_pressed"]
[connection signal="pressed" from="LevelCompleteUI/Panel/VBoxContainer/MainMenuBtn" to="LevelCompleteUI" method="_on_main_menu_btn_pressed"]
[connection signal="pressed" from="PauseScreenUI/VBoxContainer/ResumeButton" to="PauseScreenUI" method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseScreenUI/VBoxContainer/MainMenuBtn" to="PauseScreenUI" method="_on_main_menu_btn_pressed"]
[connection signal="pressed" from="PauseScreenUI/VBoxContainer/ExitButton" to="PauseScreenUI" method="_on_exit_button_pressed"]
